Restructure files and add start of section on deployment resource.

--- a/application/frontend.yaml.in
+++ b/application/frontend.yaml.in
@@ -22,7 +22,7 @@ items:
     resources:
       requests:
         storage: 1Gi
-- apiVersion: extensions/v1beta1
+- apiVersion: apps/v1beta1
   kind: Deployment
   metadata:
     name: blog
