Match YAML definitions match for things that carry through.

--- a/frontend-v4/deployment.yaml
+++ b/frontend-v4/deployment.yaml
@@ -1,24 +1,25 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  creationTimestamp: null
+  name: blog
   labels:
     app: blog
-  name: blog
 spec:
   replicas: 2
   selector:
     matchLabels:
       app: blog
-  strategy: {}
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: blog
     spec:
       containers:
-      - env:
+      - name: blog
+        image: openshiftkatacoda/blog-django-py:latest
+        ports:
+        - containerPort: 8080
+        env:
         - name: BLOG_SITE_NAME
           value: OpenShift Blog
         - name: DATABASE_HOST
@@ -38,9 +39,3 @@ spec:
             secretKeyRef:
               key: database-name
               name: blog-credentials
-        image: openshiftkatacoda/blog-django-py:latest
-        name: blog
-        ports:
-        - containerPort: 8080
-        resources: {}
-status: {}
