--- a/frontend-v3/deployment.yaml
+++ b/frontend-v3/deployment.yaml
@@ -1,29 +1,24 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  creationTimestamp: null
+  name: blog
   labels:
     app: blog
-  name: blog
 spec:
   replicas: 2
   selector:
     matchLabels:
       app: blog
-  strategy: {}
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: blog
     spec:
       containers:
-      - env:
-        - name: BLOG_SITE_NAME
-          value: OpenShift Blog
+      - name: blog
         image: openshiftkatacoda/blog-django-py:latest
-        name: blog
         ports:
         - containerPort: 8080
-        resources: {}
-status: {}
+        env:
+        - name: BLOG_SITE_NAME
+          value: OpenShift Blog
