Add warning about edge browser, and preference for Chrome.

--- a/workshop/slides/notice.md.in
+++ b/workshop/slides/notice.md.in
@@ -1,5 +1,5 @@
 This is a hands on workshop. You will need a laptop. Android devices may
-work, but iOS will not.
+work, but iOS will not. Chrome is recommended. Microsoft Edge has issues.
 
 Start straight away if you want to do the hands on workshop, otherwise you
 can watch the instructor led demonstration instead.
