--- a/workshop/slides/notice.md.in
+++ b/workshop/slides/notice.md.in
@@ -1,7 +1,5 @@
-This is a hands on workshop. You will need a laptop. Android devices may
-work, but iOS will not. Chrome is recommended. Microsoft Edge has issues.
+This is a hands on workshop. You will need a laptop. Android devices may work, but iOS will not. Chrome/Firefox is recommended. Microsoft Edge has issues. Safari can be cantankerous.
 
-Start straight away if you want to do the hands on workshop, otherwise you
-can watch the instructor led demonstration instead.
+Visit --> ${AUDIENCE_LINK}
 
-${AUDIENCE_LINK}
+Start straight away if you want to do the hands on workshop, otherwise you can watch the instructor led demonstration instead.
