Set application name for use on host.

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -20,3 +20,12 @@ configMapGenerator:
   - RESOURCE_BUDGET="medium"
   - MAX_SESSION_AGE="3600"
   - IDLE_TIMEOUT="300"
+
+vars:
+- name: APPLICATION_NAME
+  objref:
+    apiVersion: v1
+    kind: ConfigMap
+    name: spawner-environ
+  fieldref:
+    fieldPath: data.APPLICATION_NAME
