--- a/.workshop/kustomization.yaml
+++ b/.workshop/kustomization.yaml
@@ -12,12 +12,7 @@ commonLabels:
 configMapGenerator:
 - name: spawner-environ
   behavior: merge
-  literals:
-  - APPLICATION_NAME="lab-k8s-fundamentals"
-  - TERMINAL_IMAGE="quay.io/openshiftlabs/lab-k8s-fundamentals:1.16"
-  - RESOURCE_BUDGET="medium"
-  - MAX_SESSION_AGE="3600"
-  - IDLE_TIMEOUT="300"
+  env: settings.sh
 
 patches:
-- .workshop/ingress.yaml
+- ingress.yaml
