--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule ".workshop/scripts"]
 	path = .workshop/scripts
 	url = https://github.com/openshift-homeroom/spawner-scripts.git
-	branch = develop
+	branch = stable/2.x
